crates/keron-lang/tests/corpus/errors/check/secret_concat_with_string.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `+` requires `Int`, `Double`, or `String` operands, found `String` and `Secret`
  --> 2:22
  |
2 | val header: String = "Bearer " + token
  |                      ^^^^^^^^^^^^^^^^^
